syntax = "proto3";
package video_streaming;

message SabrRedirect {
  optional string url = 1;
}